deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jug
  labels:
    app: jug
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jug
  template:
    metadata:
      labels:
        app: jug
    spec:
      containers:
      - name: hello
        image: cy4n/hello:0.0.4
        ports:
        - containerPort: 8080
