service.yml
kind: Service
apiVersion: v1
metadata:
  name: jug-service
spec:
  selector:
    app: jug
  type: ClusterIP
  ports:
  - port: 8080
